            - add maximum sla threshold to hide detail pages
            - allow multiple pnp graphs in sla reports (lkco)
          - Panorama View:
            - cookie state_provider has been removed
            - background can be change in dashboard settings
            - panels are not pinnable anymore
            - tabs are now independant and can be exported and imported seperatly
            - changed internal storage format
            - default_view can no longer be a string, its always a file now
            - fixed panlet cluttering when opening dashboard with smaller screens
            - fixed state not being saved in some conditions
          - Bug Fixes
            - fixed displaying partially active attributes
            - fixed wait trigger not working all the time
            - fixed tab rotation in panorama view
            - fixed loosing filter on reports page
            - fixed save&reload button from within filesystem browser
            - fixed demanding system command permissions for enabling accept passive results (awiddersheim)
            - fixed exclusion when using 'Plugin Output' filter
            - fixed 'Plugin Output' not showing up as option when adding an and/or filter

1.82-2   Fri Feb 21 17:20:55 CET 2014
          - redirect to host details page if no services found and no service filter was set
          - Bug Fixes
            - fixed missing graphs in reports
            - fixed js error in panorama url panel

1.82     Thu Feb 13 00:01:36 CET 2014
          - naemon adjustments
          - performance improvments on pages not using any backends (reports, bp, conf,...)
          - removed old reporting plugin
          - install ssi examples
          - add plugin_output and long_plugin_output filter (awiddersheim)
          - CLI
            - added -a ALL option to send commands to all backends
          - Logcache
            - added 'logcacheremoveunused' command to remove old no longer used tables