@@ -117,3 +117,6 @@ http://www.flotcharts.org
 
 JS dagre
 https://github.com/cpettitt/dagre
+
+JS sprintf
+https://github.com/kvz/phpjs/blob/master/functions/strings/sprintf.js
