@@ -391,8 +391,23 @@ TP.iconShowEditDialog = function(panel) {
                 defaults:      { anchor: '-12', labelWidth: 80, listeners: { change: labelUpdate } },
                 items: [{
                     fieldLabel:   'Labeltext',
-                    xtype:        'textfield',
-                    name:         'labeltext'
+                    xtype:        'fieldcontainer',
+                    layout:      { type: 'hbox', align: 'stretch' },
+                    items: [{
+                        xtype:        'textfield',
+                        name:         'labeltext',
+                        flex:          1,
+                        id:           'label_textfield',
+                        listeners:   { change: labelUpdate }
+                    }, {
+                        xtype:        'button',
+                        icon:         '[% url_prefix %]plugins/panorama/images/lightning_go.png',
+                        margins:      {top: 0, right: 0, bottom: 0, left: 3},
+                        tooltip:       'open label editor wizard',
+                        handler:       function(btn) {
+                            TP.openLabelEditorWindow();
+                        }
+                    }]
                 }, {
                     fieldLabel:   'Color',
                     xtype:        'colorcbo',
@@ -635,4 +650,106 @@ TP.get_icon_form_xdata = function(settingsWindow) {
         label:      Ext.getCmp('labelForm').getForm().getValues()
     }
     return(xdata);
+}
+
+TP.openLabelEditorWindow = function() {
+    var oldValue  = Ext.getCmp('label_textfield').getValue();
+    var perf_data = '';
+    for(var key in perfdata) {
+        delete perfdata[key].perf;
+        delete perfdata[key].key;
+        for(var key2 in perfdata[key]) {
+            perf_data += '<tr><td><\/td><td><i>perfdata.'+key+'.'+key2+'<\/i><\/td><td>'+perfdata[key][key2]+'<\/td><\/tr>'
+        }
+    }
+    var labelEditorWindow = new Ext.Window({
+        height:  300,
+        width:   500,
+        layout: 'fit',
+        title:  'Label Editor',
+        modal:  true,
+        buttonAlign: 'center',
+        fbar: [/* panlet setting cancel button */
+               { xtype:  'button',
+                 text:   'cancel',
+                 handler: function(This) { Ext.getCmp('label_textfield').setValue(oldValue); This.up('window').destroy(); }
+               },
+               /* panlet setting save button */
+               { xtype:  'button',
+                 text:   'save',
+                 handler: function(This) {
+                    Ext.getCmp('label_textfield').setValue(This.up('window').down('textarea').getValue())
+                    This.up('window').destroy();
+                 }
+               }
+        ],
+        items:   [{
+            xtype:           'form',
+            bodyPadding:     2,
+            border:          0,
+            bodyStyle:       'overflow-y: auto;',
+            submitEmptyText: false,
+            defaults:      { anchor: '-12', labelWidth: 40 },
+            items:        [{
+                xtype:      'textarea',
+                fieldLabel: 'Label',
+                value:       Ext.getCmp('label_textfield').getValue(),
+                height:      70,
+                listeners: {
+                    change: function(This) {
+                        Ext.getCmp('label_textfield').setValue(This.getValue())
+                    }
+                }
+            }, {
+                fieldLabel: 'Help',
+                xtype:      'fieldcontainer',
+                items:      [{
+                    xtype:   'label',
+                    cls:     'labelhelp',
+                    html:    '<p>Use HTML to format your label<br>'
+                            +'Ex.: <i>Host &lt;b&gt;name&lt;/b&gt;<\/i><\/p>'
+                            +'<p>It is possible to create dynamic labels with {{placeholders}}.<br>'
+                            +'Ex.: <i>Host XY: {{plugin_output}}</i><\/p>'
+                            +'<p>You may also do calculations inside placeholders like this:<br>'
+                            +'Ex.: <i>Group XY {{totals.ok}}/{{totals.ok + totals.critical + totals.warning + totals.unknown}}<\/i><\/p>'
+                            +'<p>use sprintf to format numbers:<br>'
+                            +'Ex.: <i>{{sprintf("%.2f %s",perfdata.rta.val, perfdata.rta.unit)}}<\/i><\/p>'
+                            +'<p>use strftime to format timestamps:<br>'
+                            +'Ex.: <i>{{strftime("%Y-%m-%d",last_check)}}<\/i><\/p>'
+                            +'<p>conditionals are possible:<br>'
+                            +'Ex.: <i>{{ if(acknowledged) {...} else {...} }}<\/i><\/p>'
+
+                            +'<p>There are different variables available depending on the type of icon/widget:<br>'
+                            +'<table><tr><th>Groups/Filters:<\/th><td><i>totals.services.ok<\/i><\/td><td>totals number of ok services<\/td><\/tr>'
+                            +'<tr><td><\/td><td><i>total.services.warning<\/i><\/td><td>totals number of warning services<\/td><\/tr>'
+                            +'<tr><td><\/td><td><i>total.services.critical<\/i><\/td><td>totals number of critical services<\/td><\/tr>'
+                            +'<tr><td><\/td><td><i>total.services.unknown<\/i><\/td><td>totals number of unknown services<\/td><\/tr>'
+
+                            +'<tr><td><\/td><td><i>total.hosts.up<\/i><\/td><td>totals number of up hosts<\/td><\/tr>'
+                            +'<tr><td><\/td><td><i>total.hosts.down<\/i><\/td><td>totals number of down hosts<\/td><\/tr>'
+                            +'<tr><td><\/td><td><i>total.hosts.unreachable<\/i><\/td><td>totals number of unreachable hosts<\/td><\/tr>'
+
+                            +'<tr><th>Hosts:<\/th><td><i>name<\/i><\/td><td>Hostname<\/td><\/tr>'
+                            +'<tr><td><\/td><td><i>state<\/i><\/td><td>State: 0 - Ok, 1 - Warning, 2 - Critical,...<\/td><\/tr>'
+                            +'<tr><td><\/td><td><i>perfdata<\/i><\/td><td>Performance data as hash structure<\/td><\/tr>'
+                            +'<tr><td><\/td><td><i>has_been_checked<\/i><\/td><td>Has this host been checked: 0 - No, 1 - Yes<\/td><\/tr>'
+                            +'<tr><td><\/td><td><i>scheduled_downtime_depth<\/i><\/td><td>Downtime: 0 - No, &gtl;=1 - Yes<\/td><\/tr>'
+                            +'<tr><td><\/td><td><i>acknowledged<\/i><\/td><td>Has this host been acknowledged: 0 - No, 1 - Yes<\/td><\/tr>'
+                            +'<tr><td><\/td><td><i>last_check<\/i><\/td><td>Timestamp of last check<\/td><\/tr>'
+                            +'<tr><td><\/td><td><i>last_state_change<\/i><\/td><td>Timestamp of last state change<\/td><\/tr>'
+                            +'<tr><td><\/td><td><i>last_notification<\/i><\/td><td>Timestamp of last notification<\/td><\/tr>'
+                            +'<tr><td><\/td><td><i>plugin_output<\/i><\/td><td>Plugin Output<\/td><\/tr>'
+
+                            +'<tr><th>Services:<\/th><td><i>host_name<\/i><\/td><td>Hostname<\/td><\/tr>'
+                            +'<tr><td><\/td><td><i>description<\/i><\/td><td>Servicename<\/td><\/tr>'
+                            +'<tr><td><\/td><td colspan=2>(other attributes are identical to hosts)<\/td><\/tr>'
+
+                            +'<tr><th>Performance Data:<\/th><td colspan=2>(available performance data with their current values)<\/td><\/tr>'
+                            +perf_data
+
+                            +'<\/table>'
+                }]
+            }]
+        }]
+    }).show();
 }
